added chart_example.html added config tomcat