@@ -1,1 +1,3 @@
 Тут будет приложение
+Настройка томкета (пример)
+-Dfile.encoding=UTF-8 -Dini=main -Dname=main -Xmx512m -Xms512m -XX:MaxPermSize=512m -Djavax.net.ssl.trustStore=c:\TomCat\trust.jks -Djavax.net.ssl.trustStorePassword=spider -DIsTestClient=true
